--- a/presentacion/emp_viandas.html
+++ b/presentacion/emp_viandas.html
@@ -75,13 +75,7 @@
           <div class="contenido-inputs" id="inputs-ingredientes">
             <label>Ingredientes</label>
             <div class="contenido-input">
-              <input class="ingrediente" type="text" id="ingrediente1" value="" placeholder="Ingrediente 1" />
-            </div>
-            <div class="contenido-input">
-              <input class="ingrediente" type="text" id="ingrediente2" value="" placeholder="Ingrediente 2" />
-            </div>
-            <div class="contenido-input">
-              <input class="ingrediente" type="text" id="ingrediente3" value="" placeholder="Ingrediente 3" />
+            <textarea name="Ingredientes" id="Ingredientes" cols="20" rows="6"></textarea>
             </div>
           </div>
         </div>
@@ -89,12 +83,6 @@
           <fieldset class="img">
             <img src="assets/recursos/viandas/2.jpg" class="img" />
           </fieldset>
-          <div class="contenido-botones">
-            <button class="secondary-button" id="agregar-ingrediente">
-              + <br>
-              ing
-            </button>
-          </div>
           <br />
           <div class="contenido-botones">
             <input type="submit" value="Agregar vianda" class="primary-button" />
