--- a/presentacion/dietas.html
+++ b/presentacion/dietas.html
@@ -35,9 +35,11 @@
           <li>
             <a href="nosotros.html">Nosotros</a>
           </li>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
+        </ul>
+        </div>
+        <div class="navbar-right">
           <!--login-->
+          <ul>
           <li>
             <input class="control" type="email" name="usuario" id="usuario" placeholder="abc@example.com" />
           </li>
@@ -65,7 +67,7 @@
     <h2>Dietas:</h2>
     <ul>
       <li>Clasica (omnivora)</li>
-      <li>Sin sal</li>
+      <li>Baja en calorias</li>
       <li>Celiaca</li>
       <li>Mediterranea</li>
       <li>Vegetariana</li>
@@ -90,10 +92,9 @@
       los tiene otro alimento.
     </fieldset>
     <fieldset>
-      <p>Sin sal:</p>
-      Comidas sin sal para hipertensos, el tratamiento dietético de la HTA
-      consiste en una dieta rica en verduras, frutas,legumbres,pescado,aceite
-      de oliva y alimentos que contienen poca grasa.
+      <p>Baja en calorias:</p>
+      Baja en carboidratos, para quienes quienes quieren hacer dietas y bajar de peso comiendo saludable y balanceado.
+      Deja con nuestros expertos tu nutricion y pronto veras los resultados deseados.
     </fieldset>
     <fieldset>
       <p>Celiaca:</p>
