--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -60,7 +60,7 @@
             </li>
             <li>
               <input class="botons" id="ingresar" type="submit" value="Ingresar" />
-            </li>
+            </li> &nbsp;
             <p><a href="registro.html">Registrarse</a></p>
           </form>
           <span id="mostrarUsuario"></span>
