--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu" />
+      <img src="./assets/iconos/icon_menu.svg" alt="menu" class="menu" />
 
       <div class="navbar-left">
         <img src="./assets/iconos/logo_sisviansa.png" alt="logo" class="logo" title="cambiar de usuario" />
@@ -54,7 +54,6 @@
           <p><a href="registro.html">Registrarse</a></p>
           &nbsp;
           <li class="navbar-shopping-cart">
-            <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
             <button type="button" class="btn-abrir">
               <img img src="./assets/iconos/icon_shopping_cart.svg" alt="shopping cart" />
             </button>
@@ -78,7 +77,7 @@
         <div class="pop-up-title">
           <h2>Sisviansa</h2>
           <p>Sistema de viandas saludables.</p>
-          <!--<a href="#"><img src="assets/icons/icons-play-button.svg" alt=""></a>-->
+          <a href="#"><img src="assets/iconos/icons-play-button.svg" alt=""></a>
           <a href="#"><img src="assets/iconos/icons-facebook.svg" alt="" /></a>
           <a href="#"><img src="assets/iconos/icons-instagram.svg" alt="" /></a>
         </div>
@@ -87,7 +86,7 @@
           <i class="cerrar" id="close">[x]</i>
           <div class="sub-content">
             <h2>Su pedido:</h2>
-            <p>Agregar, eliminar o medificar tu carrito a voluntad :D</p>
+            <p>Agregar, eliminar o modificar tu carrito a voluntad :D</p>
             <div class="box">
               <div id="carrito"></div>
               <br />
