estilo del carrito

--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -101,15 +101,14 @@
           <i class="cerrar" id="close">[x]</i>
           <div class="sub-content">
             <h2>Su pedido:</h2>
-            <p>Agregar, eliminar o medificar tu carrito a voluntad :D</p>
+            <p>Agregar, eliminar o modificar tu carrito a voluntad :D</p>
             <div class="box">
-              <div id="carrito">
-                <br />
-                <hr />
-                <p>Total: $</p>
-                <input type="text" class="precio_total" placeholder="$" />
-                <button class="pagar" type="submit">Pagar</button>
-              </div>
+              <div id="carrito"></div>
+              <br />
+              <hr />
+              <p>Total: $</p>
+              <input type="text" class="precio_total" placeholder="$" />
+              <button class="pagar" type="submit">Pagar</button>
             </div>
             <div class="line"></div>
           </div>
