Correccion codigo de login

--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -59,7 +59,9 @@
               <input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña" />
             </li>
             <li>
-              <input class="botons" id="ingresar" type="submit" value="Ingresar" />
+              <button class="botons" id="ingresar">
+                  Ingresar
+              </button>
             </li> &nbsp;
             <p><a href="registro.html">Registrarse</a></p>
           </form>
